RDM-10924: code review changes
   [RDM-10924](https://tools.hmcts.net/jira/browse/RDM-10924)

Code review changes for PR #1555, including:
* adjust lombok config and property names in data models.
* adjust unit test mocking.
* adjust client exception handling.